--- a/src/components/HTMLContent.module.css
+++ b/src/components/HTMLContent.module.css
@@ -1,5 +1,12 @@
 .htmlContent {
 	& p {
-		@apply font-sans text-16 leading-1_2;
+		@apply font-sans text-16 leading-1_2 
+		mb-7 last:mb-0;
+	}
+
+	& h4 {
+		@apply font-sans font-semibold leading-1_3 text-18 
+		mt-2 first:mt-0
+		mb-7 last:mb-0;
 	}
 }
