--- a/src/components/HTMLContent.module.css
+++ b/src/components/HTMLContent.module.css
@@ -7,8 +7,10 @@
 		mb-8 last:mb-0;
 	}
 
-	& p {
-		@apply font-sans text-16 leading-1_2 
+	& h3 {
+		@apply font-sans font-semibold leading-1_2
+		text-18 md:text-22 lg:text-28 
+		mt-2 first:mt-0
 		mb-7 last:mb-0;
 	}
 
@@ -26,5 +28,10 @@
 		mb-6 last:mb-0;
 
 		letter-spacing: 0.14em;
+	}
+
+	& p {
+		@apply font-sans text-16 leading-1_2 
+		mb-7 last:mb-0;
 	}
 }
