fix: responsive typography

--- a/src/components/HTMLContent.module.css
+++ b/src/components/HTMLContent.module.css
@@ -7,15 +7,17 @@
 		mb-8 last:mb-0;
 	}
 
+	/* TODO: Consolidate with h4 */
 	& h3 {
 		@apply font-sans font-semibold leading-1_2
-		text-18 md:text-22 lg:text-28 
+		text-18 md:text-22 
 		mt-2 first:mt-0
 		mb-7 last:mb-0;
 	}
 
 	& h4 {
-		@apply font-sans font-semibold leading-1_3 text-18 
+		@apply font-sans font-semibold leading-1_3 
+		text-18 lg:text-22
 		mt-2 first:mt-0
 		mb-7 last:mb-0;
 	}
@@ -31,7 +33,9 @@
 	}
 
 	& p {
-		@apply font-sans text-16 leading-1_2 
+		@apply font-sans 
+		text-16 lg:text-18
+		leading-1_2 
 		mb-7 last:mb-0;
 	}
 }
