--- a/src/components/HTMLContent.module.css
+++ b/src/components/HTMLContent.module.css
@@ -10,14 +10,14 @@
 	/* TODO: Consolidate with h4 */
 	& h3 {
 		@apply font-sans font-semibold leading-1_2
-		text-18 md:text-22 
+		text-18 md:text-22 lg:text-24
 		mt-2 first:mt-0
 		mb-7 last:mb-0;
 	}
 
 	& h4 {
-		@apply font-sans font-semibold leading-1_3 
-		text-18 lg:text-22
+		@apply font-sans font-semibold leading-1_2 
+		text-18 md:text-22 lg:text-24
 		mt-2 first:mt-0
 		mb-7 last:mb-0;
 	}
@@ -25,17 +25,16 @@
 	& h5 {
 		@apply font-sansExt 
 		text-16 lg:text-18
+		tracking-caps
 		leading-1_5 uppercase font-bold
 		mt-12 first:mt-0
 		mb-6 last:mb-0;
-
-		letter-spacing: 0.14em;
 	}
 
 	& p {
 		@apply font-sans 
-		text-16 lg:text-18
-		leading-1_2 lg:leading-1_3
+		text-16 lg:text-22
+		leading-1_2
 		mb-7 last:mb-0;
 	}
 
