--- a/src/components/HTMLContent.module.css
+++ b/src/components/HTMLContent.module.css
@@ -1,44 +1,108 @@
-.htmlContent {
+.htmlContentBase {
 	& h2 {
-		@apply font-serif 
-		text-22 sm:text-28 md:text-32 lg:text-42
-		leading-1_2 md:leading-1_15
-		mt-2 first:mt-0	
-		mb-8 last:mb-0;
-	}
-
-	/* TODO: Consolidate with h4 */
-	& h3 {
-		@apply font-sans font-semibold leading-1_2
-		text-18 md:text-22 lg:text-24
-		mt-2 first:mt-0
-		mb-7 last:mb-0;
+		@apply font-serif first:mt-0 last:mb-0;
 	}
 
 	& h4 {
-		@apply font-sans font-semibold leading-1_2 
-		text-18 md:text-22 lg:text-24
-		mt-2 first:mt-0
-		mb-7 last:mb-0;
+		@apply font-sans font-semibold first:mt-0 last:mb-0;
 	}
 
 	& h5 {
-		@apply font-sansExt 
-		text-16 lg:text-18
-		tracking-caps
-		leading-1_5 uppercase font-bold
-		mt-12 first:mt-0
-		mb-6 last:mb-0;
+		@apply font-sansExt tracking-caps uppercase font-bold first:mt-0 last:mb-0;
 	}
 
 	& p {
-		@apply font-sans 
-		text-16 lg:text-22
-		leading-1_2
-		mb-7 last:mb-0;
+		@apply font-sans first:mt-0 last:mb-0;
 	}
 
 	& a {
 		@apply underline font-medium;
+	}
+}
+
+.htmlContent {
+	& h2 {
+		@apply text-28 md:text-32 lg:text-36
+		leading-1
+		mt-6 
+		mb-8;
+	}
+
+	& h4 {
+		@apply text-16 md:text-18 lg:text-22
+		leading-1_2 
+		mt-6 first:mt-0
+		mb-8 last:mb-0;
+	}
+
+	& h5 {
+		@apply text-14 md:text-15 lg:text-16
+		leading-1_5 
+		mt-6 
+		mb-5;
+	}
+
+	& p {
+		@apply text-14 md:text-16 lg:text-18
+		leading-1_3
+		mb-9;
+	}
+}
+
+.htmlContentMedium {
+	& h2 {
+		@apply text-32 md:text-42 lg:text-52
+		leading-1
+		mt-6 	
+		mb-9;
+	}
+
+	& h4 {
+		@apply text-18 md:text-22 lg:text-24
+		leading-1_2 
+		mt-6 
+		mb-9;
+	}
+
+	& h5 {
+		@apply text-16 lg:text-18
+		leading-1_5 
+		mt-6 
+		mb-6;
+	}
+
+	& p {
+		@apply text-16 lg:text-18
+		leading-1_3
+		mb-10;
+	}
+}
+
+.htmlContentLarge {
+	& h2 {
+		@apply text-42 md:text-52 lg:text-62	
+		leading-1_15
+		mt-6  
+		mb-12;
+	}
+
+	& h4 {
+		@apply text-18 md:text-24 lg:text-28
+		leading-1_2 
+		mt-6 
+		mb-9;
+	}
+
+	& h5 {
+		@apply text-16 md:text-18 lg:text-22
+		leading-1_5
+		mt-6 
+		mb-6;
+	}
+
+	& p {
+		@apply text-16 md:text-18 lg:text-22
+		leading-1_3
+		mb-10;
 	}
 }
